--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^10.12.2"
+		"firebase": "^10.12.2",
+		"svelte-french-toast": "^1.2.0"
 	}
 }
